[tool.poetry]
name = "code-quality"
version = "0.1.0"
description = ""
authors = ["Foster Lee <fosterlee@fosterlee.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.11.1"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^0.9.4"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
